--- a/css/main.css
+++ b/css/main.css
@@ -97,21 +97,120 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+/* -------------------- Base Header - Footer Styles -------------------- */
+header,
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
+header. content-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+}
 
+header nav {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-flow: row wrap;
+}
 
+header nav ul {
+    display: flex;
+    justify-content: space-around;
+  }
+  
+  footer .social-icons {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+  
+  footer .social-icons p {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
+ /* ---------------- Mobile Syles - Homepage -------------- */
+ /* Hero Area */
 
+.hero-area {
+    display: flex;
+    justify-content: center;
+    flex-flow: row wrap;
+  }
+  
+  /* Aside */
+  
+  aside {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+  }
+  
+  /* Features */
+  
+  .features {
+    display: flex;
+    justify-content: center;
+    flex-flow: row wrap;
+  }
+  
+  .features .features-items {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+  }
+  
+  /* Reviews */
+  
+  .reviews {
+    display: flex;
+    justify-content: center;
+    flex-flow: row wrap;
+  }
+/* ==========================================================================
+   About Page
+   ========================================================================== */
 
-
-
-
-
-
-
-
-
-
+   .mission {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+  }
+  
+  .contact-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+  }
+  
+  /* ==========================================================================
+     FAQ Page
+     ========================================================================== */
+  
+  .faq {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+  }
+  
+  .faq .content-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+  }
 
 /* ==========================================================================
    Helper classes
