Formatted mobile layout

--- a/css/main.css
+++ b/css/main.css
@@ -96,32 +96,65 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-
+   .content-wrapper {
+    width: 90%;
+    margin: 50px 0;
+  }
 /* -------------------- Base Header - Footer Styles -------------------- */
 header,
 footer {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-flow: row wrap;
 }
 
-header. content-wrapper {
+header {
+    padding: 15px 0;
+}
+
+header .content-wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-flow: row wrap;
+    margin: 0;
 }
+.header-divider {
+    width: 100%;
+    height: 1px;
+    margin: 10px 0 20px 0;
+  }
 
 header nav {
     display: flex;
     justify-content: space-around;
     align-items: center;
     flex-flow: row wrap;
+    width: 60%;
 }
 
 header nav ul {
     display: flex;
     justify-content: space-around;
+    width: 100%;
+  }
+
+  footer {
+    flex-direction: column;
+  }
+
+  footer p {
+    margin: 0%;
+  }
+
+  footer .content-wrapper {
+    width: 55%;
+    margin: 50px 0;
+  }
+  
+  footer .contact {
+    margin-bottom: 50px;
   }
   
   footer .social-icons {
@@ -134,6 +167,10 @@ header nav ul {
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+
+  footer .copyright {
+    margin: 20px 0;
   }
 
  /* ---------------- Mobile Syles - Homepage -------------- */
@@ -161,12 +198,25 @@ header nav ul {
     justify-content: center;
     flex-flow: row wrap;
   }
+
+  .features h2 {
+    margin-bottom: 60px;
+  }
+  
+  .features article {
+    width: 63%;
+    margin: 30px 0;
+  }
   
   .features .features-items {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-flow: row wrap;
+  }
+
+  .features p {
+    margin: 0;
   }
   
   /* Reviews */
@@ -175,6 +225,16 @@ header nav ul {
     display: flex;
     justify-content: center;
     flex-flow: row wrap;
+  }
+
+
+.reviews h2 {
+    margin-bottom: 40px;
+  }
+  
+  .reviews h3 {
+    width: 55%;
+    margin: 20px 0;
   }
 /* ==========================================================================
    About Page
@@ -194,6 +254,9 @@ header nav ul {
     flex-flow: row wrap;
   }
   
+  .contact-content p {
+    margin: 0;
+  }
   /* ==========================================================================
      FAQ Page
      ========================================================================== */
@@ -210,6 +273,14 @@ header nav ul {
     justify-content: center;
     align-items: center;
     flex-flow: row wrap;
+  }
+
+  .faq h2 {
+    margin-bottom: 40px;
+  }
+  
+  .faq-content {
+    margin-bottom: 50px;
   }
 
 /* ==========================================================================
