Added breakpoints and code for tablet

--- a/css/main.css
+++ b/css/main.css
@@ -10,144 +10,150 @@
    Base styles: opinionated defaults
    ========================================================================== */
 
-html {
+   html {
     color: #222;
     font-size: 1em;
     line-height: 1.4;
-}
-
-/*
- * Remove text-shadow in selection highlight:
- * https://twitter.com/miketaylr/status/12228805301
- *
- * Vendor-prefixed and regular ::selection selectors cannot be combined:
- * https://stackoverflow.com/a/16982510/7133471
- *
- * Customize the background color to match your design.
- */
-
-::-moz-selection {
+  }
+  
+  header {}
+  
+  /*
+   * Remove text-shadow in selection highlight:
+   * https://twitter.com/miketaylr/status/12228805301
+   *
+   * Vendor-prefixed and regular ::selection selectors cannot be combined:
+   * https://stackoverflow.com/a/16982510/7133471
+   *
+   * Customize the background color to match your design.
+   */
+  
+  ::-moz-selection {
     background: #b3d4fc;
     text-shadow: none;
-}
-
-::selection {
+  }
+  
+  ::selection {
     background: #b3d4fc;
     text-shadow: none;
-}
-
-/*
- * A better looking default horizontal rule
- */
-
-hr {
+  }
+  
+  /*
+   * A better looking default horizontal rule
+   */
+  
+  hr {
     display: block;
     height: 1px;
     border: 0;
     border-top: 1px solid #ccc;
     margin: 1em 0;
     padding: 0;
-}
-
-/*
- * Remove the gap between audio, canvas, iframes,
- * images, videos and the bottom of their containers:
- * https://github.com/h5bp/html5-boilerplate/issues/440
- */
-
-audio,
-canvas,
-iframe,
-img,
-svg,
-video {
+  }
+  
+  /*
+   * Remove the gap between audio, canvas, iframes,
+   * images, videos and the bottom of their containers:
+   * https://github.com/h5bp/html5-boilerplate/issues/440
+   */
+  
+  audio,
+  canvas,
+  iframe,
+  img,
+  svg,
+  video {
     vertical-align: middle;
-}
-
-/*
- * Remove default fieldset styles.
- */
-
-fieldset {
+  }
+  
+  /*
+   * Remove default fieldset styles.
+   */
+  
+  fieldset {
     border: 0;
     margin: 0;
     padding: 0;
-}
-
-/*
- * Allow only vertical resizing of textareas.
- */
-
-textarea {
+  }
+  
+  /*
+   * Allow only vertical resizing of textareas.
+   */
+  
+  textarea {
     resize: vertical;
-}
-
-/* ==========================================================================
-   Browser Upgrade Prompt
-   ========================================================================== */
-
-.browserupgrade {
+  }
+  
+  /* ==========================================================================
+     Browser Upgrade Prompt
+     ========================================================================== */
+  
+  .browserupgrade {
     margin: 0.2em 0;
     background: #ccc;
     color: #000;
     padding: 0.2em 0;
-}
-
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
-   .content-wrapper {
+  }
+  
+  /* ==========================================================================
+     Author's custom styles
+     ========================================================================== */
+  
+  .content-wrapper {
     width: 90%;
     margin: 50px 0;
   }
-/* -------------------- Base Header - Footer Styles -------------------- */
-header,
-footer {
+  
+  /* -------------------- Base Header - Footer Styles -------------------- */
+  
+  header,
+  footer {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-flow: row wrap;
-}
-
-header {
+  }
+  
+  header {
     padding: 15px 0;
-}
-
-header .content-wrapper {
+  }
+  
+  header .content-wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-flow: row wrap;
     margin: 0;
-}
-.header-divider {
+  }
+  
+  .header-divider {
     width: 100%;
     height: 1px;
     margin: 10px 0 20px 0;
   }
-
-header nav {
+  
+  header nav {
     display: flex;
     justify-content: space-around;
     align-items: center;
     flex-flow: row wrap;
     width: 60%;
-}
-
-header nav ul {
+  }
+  
+  header nav ul {
     display: flex;
     justify-content: space-around;
     width: 100%;
   }
-
+  
   footer {
     flex-direction: column;
   }
-
+  
   footer p {
-    margin: 0%;
+    margin: 0;
   }
-
+  
   footer .content-wrapper {
     width: 55%;
     margin: 50px 0;
@@ -168,15 +174,16 @@ header nav ul {
     justify-content: center;
     align-items: center;
   }
-
+  
   footer .copyright {
     margin: 20px 0;
   }
-
- /* ---------------- Mobile Syles - Homepage -------------- */
- /* Hero Area */
-
-.hero-area {
+  
+  /* -------------------- Mobile Styles - Homepage -------------------- */
+  
+  /* Hero Area */
+  
+  .hero-area {
     display: flex;
     justify-content: center;
     flex-flow: row wrap;
@@ -198,7 +205,7 @@ header nav ul {
     justify-content: center;
     flex-flow: row wrap;
   }
-
+  
   .features h2 {
     margin-bottom: 60px;
   }
@@ -214,7 +221,7 @@ header nav ul {
     align-items: center;
     flex-flow: row wrap;
   }
-
+  
   .features p {
     margin: 0;
   }
@@ -226,9 +233,8 @@ header nav ul {
     justify-content: center;
     flex-flow: row wrap;
   }
-
-
-.reviews h2 {
+  
+  .reviews h2 {
     margin-bottom: 40px;
   }
   
@@ -236,11 +242,12 @@ header nav ul {
     width: 55%;
     margin: 20px 0;
   }
-/* ==========================================================================
-   About Page
-   ========================================================================== */
-
-   .mission {
+  
+  /* ==========================================================================
+     About Page
+     ========================================================================== */
+  
+  .mission {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -257,6 +264,7 @@ header nav ul {
   .contact-content p {
     margin: 0;
   }
+  
   /* ==========================================================================
      FAQ Page
      ========================================================================== */
@@ -269,12 +277,13 @@ header nav ul {
   }
   
   .faq .content-wrapper {
+    margin: 50px 0 0 0;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-flow: row wrap;
   }
-
+  
   .faq h2 {
     margin-bottom: 40px;
   }
@@ -282,29 +291,29 @@ header nav ul {
   .faq-content {
     margin-bottom: 50px;
   }
-
-/* ==========================================================================
-   Helper classes
-   ========================================================================== */
-
-/*
- * Hide visually and from screen readers
- */
-
-.hidden {
+  
+  /* ==========================================================================
+     Helper classes
+     ========================================================================== */
+  
+  /*
+   * Hide visually and from screen readers
+   */
+  
+  .hidden {
     display: none !important;
-}
-
-/*
- * Hide only visually, but have it available for screen readers:
- * https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
- *
- * 1. For long content, line feeds are not interpreted as spaces and small width
- *    causes content to wrap 1 word per line:
- *    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
- */
-
-.visuallyhidden {
+  }
+  
+  /*
+   * Hide only visually, but have it available for screen readers:
+   * https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
+   *
+   * 1. For long content, line feeds are not interpreted as spaces and small width
+   *    causes content to wrap 1 word per line:
+   *    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
+   */
+  
+  .visuallyhidden {
     border: 0;
     clip: rect(0 0 0 0);
     height: 1px;
@@ -313,17 +322,18 @@ header nav ul {
     padding: 0;
     position: absolute;
     width: 1px;
-    white-space: nowrap; /* 1 */
-}
-
-/*
- * Extends the .visuallyhidden class to allow the element
- * to be focusable when navigated to via the keyboard:
- * https://www.drupal.org/node/897638
- */
-
-.visuallyhidden.focusable:active,
-.visuallyhidden.focusable:focus {
+    white-space: nowrap;
+    /* 1 */
+  }
+  
+  /*
+   * Extends the .visuallyhidden class to allow the element
+   * to be focusable when navigated to via the keyboard:
+   * https://www.drupal.org/node/897638
+   */
+  
+  .visuallyhidden.focusable:active,
+  .visuallyhidden.focusable:focus {
     clip: auto;
     height: auto;
     margin: 0;
@@ -331,127 +341,247 @@ header nav ul {
     position: static;
     width: auto;
     white-space: inherit;
-}
-
-/*
- * Hide visually and from screen readers, but maintain layout
- */
-
-.invisible {
+  }
+  
+  /*
+   * Hide visually and from screen readers, but maintain layout
+   */
+  
+  .invisible {
     visibility: hidden;
-}
-
-/*
- * Clearfix: contain floats
- *
- * For modern browsers
- * 1. The space content is one way to avoid an Opera bug when the
- *    `contenteditable` attribute is included anywhere else in the document.
- *    Otherwise it causes space to appear at the top and bottom of elements
- *    that receive the `clearfix` class.
- * 2. The use of `table` rather than `block` is only necessary if using
- *    `:before` to contain the top-margins of child elements.
- */
-
-.clearfix:before,
-.clearfix:after {
-    content: " "; /* 1 */
-    display: table; /* 2 */
-}
-
-.clearfix:after {
+  }
+  
+  /*
+   * Clearfix: contain floats
+   *
+   * For modern browsers
+   * 1. The space content is one way to avoid an Opera bug when the
+   *    `contenteditable` attribute is included anywhere else in the document.
+   *    Otherwise it causes space to appear at the top and bottom of elements
+   *    that receive the `clearfix` class.
+   * 2. The use of `table` rather than `block` is only necessary if using
+   *    `:before` to contain the top-margins of child elements.
+   */
+  
+  .clearfix:before,
+  .clearfix:after {
+    content: " ";
+    /* 1 */
+    display: table;
+    /* 2 */
+  }
+  
+  .clearfix:after {
     clear: both;
-}
-
-/* ==========================================================================
-   EXAMPLE Media Queries for Responsive Design.
-   These examples override the primary ('mobile first') styles.
-   Modify as content requires.
-   ========================================================================== */
-
-@media only screen and (min-width: 35em) {
-    /* Style adjustments for viewports that meet the condition */
-}
-
-@media print,
-       (-webkit-min-device-pixel-ratio: 1.25),
-       (min-resolution: 1.25dppx),
-       (min-resolution: 120dpi) {
+  }
+  
+  /* ==========================================================================
+     EXAMPLE Media Queries for Responsive Design.
+     These examples override the primary ('mobile first') styles.
+     Modify as content requires.
+     ========================================================================== */
+  
+     @media only screen and (min-width:768px) {
+      /*Tablet styles here*/
+    
+      /* General styles */
+      .content-wrapper {
+        max-width: 640px;
+        margin: 100px 0;
+      }
+    
+      /* Header */
+      header {
+        justify-content: space-around;
+        padding: 33px 0;
+      }
+    
+      header .content-wrapper {
+        width: 100%;
+        justify-content: space-between;
+      }
+    
+      header nav {
+        width: 20%;
+      }
+    
+      header nav ul {
+        justify-content: space-between;
+      }
+    
+      .header-divider {
+        display: none;
+      }
+      /* Hero Area */
+    
+      /* Aside */
+      aside .content-wrapper {
+        margin: 50px 0;
+        display: flex;
+        justify-content: space-between;
+        flex-flow: row wrap;
+      }
+    
+      aside .content-wrapper .form-description,
+      aside .content-wrapper .form {
+        width: 40%;
+        margin: 0;
+      }
+    
+      /* Features */
+      .features article {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-flow: column wrap;
+        flex-basis: 50%;
+      }
+      
+      .features .features-item-description {
+        width: 50%;
+      }
+    
+      /* Reviews */
+      .reviews article {
+        display: flex;
+        justify-content: space-between;
+      }
+    
+      .reviews article div {
+        width: 49%;
+      }
+    
+      /* Footer */
+      footer .content-wrapper {
+        width: 65%;
+        margin: 100px 0;
+      }
+    
+      .footer-content {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+    
+      footer .contact {
+        margin-bottom: 0;
+      }
+    
+      footer .copyright {
+        width: 100%;
+      }
+    
+      /* ==========================================================================
+       About Page
+       ========================================================================== */
+    
+      .mission-content {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding-top: 20px
+      }
+    
+      .mission-content p {
+        width: 45%;
+      }
+    
+      .contact-section .content-wrapper h2 {
+        width: 80%;
+      }
+    
+      .contact-content {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+      }
+    
+      /* ==========================================================================
+       FAQ Page
+       ========================================================================== */
+    
+      .faq .content-wrapper {
+        justify-content: space-between;
+      }
+    
+      .faq-content {
+        flex-basis: 45%;
+      }
+    
+      .faq h2 {
+        width: 100%;
+      }
+    }
+  
+  @media print,
+  (-webkit-min-device-pixel-ratio: 1.25),
+  (min-resolution: 1.25dppx),
+  (min-resolution: 120dpi) {
     /* Style adjustments for high resolution devices */
-}
-
-/* ==========================================================================
-   Print styles.
-   Inlined to avoid the additional HTTP request:
-   https://www.phpied.com/delay-loading-your-print-css/
-   ========================================================================== */
-
-@media print {
+  }
+  
+  /* ==========================================================================
+     Print styles.
+     Inlined to avoid the additional HTTP request:
+     https://www.phpied.com/delay-loading-your-print-css/
+     ========================================================================== */
+  
+  @media print {
     *,
     *:before,
     *:after {
-        background: transparent !important;
-        color: #000 !important; /* Black prints faster */
-        -webkit-box-shadow: none !important;
-        box-shadow: none !important;
-        text-shadow: none !important;
+      background: transparent !important;
+      color: #000 !important;
+      /* Black prints faster */
+      -webkit-box-shadow: none !important;
+      box-shadow: none !important;
+      text-shadow: none !important;
     }
-
     a,
     a:visited {
-        text-decoration: underline;
+      text-decoration: underline;
     }
-
     a[href]:after {
-        content: " (" attr(href) ")";
+      content: " (" attr(href) ")";
     }
-
     abbr[title]:after {
-        content: " (" attr(title) ")";
+      content: " (" attr(title) ")";
     }
-
     /*
-     * Don't show links that are fragment identifiers,
-     * or use the `javascript:` pseudo protocol
-     */
-
+       * Don't show links that are fragment identifiers,
+       * or use the `javascript:` pseudo protocol
+       */
     a[href^="#"]:after,
     a[href^="javascript:"]:after {
-        content: "";
+      content: "";
     }
-
     pre {
-        white-space: pre-wrap !important;
+      white-space: pre-wrap !important;
     }
     pre,
     blockquote {
-        border: 1px solid #999;
-        page-break-inside: avoid;
+      border: 1px solid #999;
+      page-break-inside: avoid;
     }
-
     /*
-     * Printing Tables:
-     * http://css-discuss.incutio.com/wiki/Printing_Tables
-     */
-
+       * Printing Tables:
+       * http://css-discuss.incutio.com/wiki/Printing_Tables
+       */
     thead {
-        display: table-header-group;
+      display: table-header-group;
     }
-
     tr,
     img {
-        page-break-inside: avoid;
+      page-break-inside: avoid;
     }
-
     p,
     h2,
     h3 {
-        orphans: 3;
-        widows: 3;
+      orphans: 3;
+      widows: 3;
     }
-
     h2,
     h3 {
-        page-break-after: avoid;
+      page-break-after: avoid;
     }
-}
+  }
