Font and text style changed

--- a/css/main.css
+++ b/css/main.css
@@ -98,7 +98,58 @@
   /* ==========================================================================
      Author's custom styles
      ========================================================================== */
-  
+
+/* General Styles */
+ 
+html {
+	font-size: 18px;
+}
+ 
+body {
+  font-family: 'Akshar', sans-serif;
+  font-size: 1em;
+  text-align: left;
+ }
+ 
+ul, 
+ol {
+  list-style-type: none;
+}
+ 
+a {
+	color: #e2e3ed;
+  text-decoration: none;
+}
+ 
+h2 {
+  font-family: 'Figtree', sans-serif;
+  font-size: 1.875em;
+}
+ 
+h3, 
+h4 {
+  font-family: 'Figtree', sans-serif;
+  margin: 20px 0;
+  font-size: 1.125em;
+}
+ 
+p {
+	font-size: .875em;
+  line-height: 1.285;
+}
+ 
+img {
+ 
+}
+ 
+figure {
+ 
+}
+ 
+address {
+  font-style: normal;
+}
+ 
   .content-wrapper {
     width: 90%;
     margin: 50px 0;
