Homepage bakground and additional styling

--- a/css/main.css
+++ b/css/main.css
@@ -106,8 +106,9 @@ html {
 }
  
 body {
-  font-family: 'Akshar', sans-serif;
   font-size: 1em;
+  font-family: 'Akshar', sans-serif;
+  color: #e2e3ed;
   text-align: left;
  }
  
@@ -123,12 +124,14 @@ a {
  
 h2 {
   font-family: 'Figtree', sans-serif;
+  font-weight: 500;
   font-size: 1.875em;
 }
  
 h3, 
 h4 {
   font-family: 'Figtree', sans-serif;
+  font-weight: 500;
   margin: 20px 0;
   font-size: 1.125em;
 }
@@ -156,9 +159,10 @@ address {
   }
   
   /* -------------------- Base Header - Footer Styles -------------------- */
-  
+
   header,
   footer {
+    background-color: #202322;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -170,25 +174,31 @@ address {
   }
   
   header .content-wrapper {
+    margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-flow: row wrap;
-    margin: 0;
+    
   }
   
   .header-divider {
+    background-color: #3a3a3a;
     width: 100%;
     height: 1px;
     margin: 10px 0 20px 0;
   }
   
   header nav {
+    width: 60%;
+    font-size: 1.125em;
+    font-weight: 700;
+    text-transform: uppercase;
     display: flex;
     justify-content: space-around;
     align-items: center;
     flex-flow: row wrap;
-    width: 60%;
+    
   }
   
   header nav ul {
@@ -196,8 +206,13 @@ address {
     justify-content: space-around;
     width: 100%;
   }
+
+  header nav ul li {
+    font-size: 1.125em;
+  }
   
   footer {
+    text-align: center;
     flex-direction: column;
   }
   
@@ -239,14 +254,47 @@ address {
     justify-content: center;
     flex-flow: row wrap;
   }
+
+  .hero-area h1 {
+    font-size: 2.25em;
+    font-family: 'Poppins', Helvetica, Arial, sans-serif;
+    font-weight: 500; 
+    line-height: 1.2; 
+  }
   
   /* Aside */
   
   aside {
+    background-color: #527158;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-flow: row wrap;
+  }
+  aside .form {
+    margin-top: 30px;
+  }
+   
+  input[type=text] {
+    box-sizing: border-box;
+    width: 100%;
+    color: #2a423a;
+    font-style: italic;
+    padding: 1em;
+  }
+   
+  input[type=button] {
+    width: 100%;
+    padding: 20px 0;
+    margin-top: 20px;
+    background-color: #2a423a;
+    font-family: 'Poppins','Figtree','Akshar', Helvetica, Arial, sans-serif;
+    font-weight: 500;
+    font-size: 1.125em;
+    color: #e2e3ed;
+    border: none;
+    text-align: center;
+    text-transform: uppercase;
   }
   
   /* Features */
@@ -274,12 +322,14 @@ address {
   }
   
   .features p {
+    text-align: center;
     margin: 0;
   }
   
   /* Reviews */
   
   .reviews {
+    background-color: #2a423a;
     display: flex;
     justify-content: center;
     flex-flow: row wrap;
@@ -299,6 +349,7 @@ address {
      ========================================================================== */
   
   .mission {
+    background-color: #527158;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -306,6 +357,7 @@ address {
   }
   
   .contact-section {
+    background-color: #2a423a;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -321,6 +373,7 @@ address {
      ========================================================================== */
   
   .faq {
+    background-color: #527158
     display: flex;
     justify-content: center;
     align-items: center;
@@ -337,10 +390,15 @@ address {
   
   .faq h2 {
     margin-bottom: 40px;
+    line-height: 1;
   }
   
   .faq-content {
     margin-bottom: 50px;
+  }
+
+  .faq-content h4 {
+    line-height: 1.333;
   }
   
   /* ==========================================================================
