--- a/css/main.css
+++ b/css/main.css
@@ -16,8 +16,6 @@
     line-height: 1.4;
   }
   
-  header {}
-  
   /*
    * Remove text-shadow in selection highlight:
    * https://twitter.com/miketaylr/status/12228805301
@@ -98,68 +96,68 @@
   /* ==========================================================================
      Author's custom styles
      ========================================================================== */
-
-/* General Styles */
- 
-html {
-	font-size: 18px;
-}
- 
-body {
-  font-size: 1em;
-  font-family: 'Akshar', sans-serif;
-  color: #e2e3ed;
-  text-align: left;
- }
- 
-ul, 
-ol {
-  list-style-type: none;
-}
- 
-a {
-	color: #e2e3ed;
-  text-decoration: none;
-}
- 
-h2 {
-  font-family: 'Figtree', sans-serif;
-  font-weight: 500;
-  font-size: 1.875em;
-}
- 
-h3, 
-h4 {
-  font-family: 'Figtree', sans-serif;
-  font-weight: 500;
-  margin: 20px 0;
-  font-size: 1.125em;
-}
- 
-p {
-	font-size: .875em;
-  line-height: 1.285;
-}
- 
-img {
- 
-}
- 
-figure {
- 
-}
- 
-address {
-  font-style: normal;
-}
- 
+  
+  /* General Styles */
+   
+  html {
+    font-size: 16px;
+  }
+   
+  body {
+    font-size: 1em;
+    font-family: 'Open Sans', sans-serif;
+    color: #e2e3ed;
+    text-align: left;
+  }
+   
+  ul, 
+  ol {
+    list-style-type: none;
+  }
+   
+  a {
+    color: #e2e3ed;
+    text-decoration: none;
+  }
+   
+  h2 {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+    font-size: 1.875em;
+  }
+   
+  h3, 
+  h4 {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+    font-size: 1.125em;
+    margin: 20px 0;
+  }
+   
+  p {
+    font-size: .875em;
+    line-height: 1.285;
+  }
+   
+  img {
+   width: 100%;
+  }
+   
+  figure {
+   margin: 0;
+  }
+   
+  address {
+   font-style: normal;
+  }
+   
   .content-wrapper {
     width: 90%;
     margin: 50px 0;
   }
   
   /* -------------------- Base Header - Footer Styles -------------------- */
-
+  
   header,
   footer {
     background-color: #202322;
@@ -179,13 +177,20 @@ address {
     justify-content: center;
     align-items: center;
     flex-flow: row wrap;
-    
+  }
+  
+  header figure {
+    width: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
   }
   
   .header-divider {
-    background-color: #3a3a3a;
-    width: 100%;
+    background: #3a3a3a; 
     height: 1px;
+    width: 100%;
     margin: 10px 0 20px 0;
   }
   
@@ -198,15 +203,14 @@ address {
     justify-content: space-around;
     align-items: center;
     flex-flow: row wrap;
-    
   }
   
   header nav ul {
+    width: 100%;
     display: flex;
     justify-content: space-around;
-    width: 100%;
   }
-
+  
   header nav ul li {
     font-size: 1.125em;
   }
@@ -245,19 +249,24 @@ address {
     margin: 20px 0;
   }
   
+  
   /* -------------------- Mobile Styles - Homepage -------------------- */
   
   /* Hero Area */
   
   .hero-area {
+    background: url(../img/unplugged-retreat.jpg);
+    background-size: cover;
+    background-position: center;
+    min-height: 500px;
     display: flex;
     justify-content: center;
     flex-flow: row wrap;
   }
-
+  
   .hero-area h1 {
     font-size: 2.25em;
-    font-family: 'Poppins', Helvetica, Arial, sans-serif;
+    font-family: 'Poppins', Helvetica, Arial, sans-serif; 
     font-weight: 500; 
     line-height: 1.2; 
   }
@@ -271,10 +280,11 @@ address {
     align-items: center;
     flex-flow: row wrap;
   }
-  aside .form {
+  
+  aside .form{
     margin-top: 30px;
   }
-   
+  
   input[type=text] {
     box-sizing: border-box;
     width: 100%;
@@ -282,13 +292,13 @@ address {
     font-style: italic;
     padding: 1em;
   }
-   
+  
   input[type=button] {
     width: 100%;
     padding: 20px 0;
     margin-top: 20px;
     background-color: #2a423a;
-    font-family: 'Poppins','Figtree','Akshar', Helvetica, Arial, sans-serif;
+    font-family: 'Poppins', Helvetica, Arial, sans-serif;
     font-weight: 500;
     font-size: 1.125em;
     color: #e2e3ed;
@@ -300,6 +310,9 @@ address {
   /* Features */
   
   .features {
+    background: url('../img/unplugged-retreat-features.jpg');
+    background-size: cover;
+    background-position: center;
     display: flex;
     justify-content: center;
     flex-flow: row wrap;
@@ -337,6 +350,7 @@ address {
   
   .reviews h2 {
     margin-bottom: 40px;
+    line-height: 1;
   }
   
   .reviews h3 {
@@ -373,7 +387,7 @@ address {
      ========================================================================== */
   
   .faq {
-    background-color: #527158
+    background-color: #527158;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -396,7 +410,7 @@ address {
   .faq-content {
     margin-bottom: 50px;
   }
-
+  
   .faq-content h4 {
     line-height: 1.333;
   }
@@ -490,196 +504,291 @@ address {
      Modify as content requires.
      ========================================================================== */
   
-     @media only screen and (min-width:768px) {
-      /*Tablet styles here*/
-    
-      /* General styles */
-      .content-wrapper {
-        max-width: 640px;
-        margin: 100px 0;
-      }
-    
-      /* Header */
-      header {
-        justify-content: space-around;
-        padding: 33px 0;
-      }
-    
-      header .content-wrapper {
-        width: 100%;
-        justify-content: space-between;
-      }
-    
-      header nav {
-        width: 20%;
-      }
-    
-      header nav ul {
-        justify-content: space-between;
-      }
-    
-      .header-divider {
-        display: none;
-      }
-      /* Hero Area */
-    
-      /* Aside */
-      aside .content-wrapper {
-        margin: 50px 0;
-        display: flex;
-        justify-content: space-between;
-        flex-flow: row wrap;
-      }
-    
-      aside .content-wrapper .form-description,
-      aside .content-wrapper .form {
-        width: 40%;
-        margin: 0;
-      }
-    
-      /* Features */
-      .features article {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-flow: column wrap;
-        flex-basis: 50%;
-      }
-      
-      .features .features-item-description {
-        width: 50%;
-      }
-    
-      /* Reviews */
-      .reviews article {
-        display: flex;
-        justify-content: space-between;
-      }
-    
-      .reviews article div {
-        width: 49%;
-      }
-    
-      /* Footer */
-      footer .content-wrapper {
-        width: 65%;
-        margin: 100px 0;
-      }
-    
-      .footer-content {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-      }
-    
-      footer .contact {
-        margin-bottom: 0;
-      }
-    
-      footer .copyright {
-        width: 100%;
-      }
-    
-      /* ==========================================================================
-       About Page
-       ========================================================================== */
-    
-      .mission-content {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding-top: 20px
-      }
-    
-      .mission-content p {
-        width: 45%;
-      }
-    
-      .contact-section .content-wrapper h2 {
-        width: 80%;
-      }
-    
-      .contact-content {
-        display: flex;
-        justify-content: space-between;
-        align-items: flex-start;
-      }
-    
-      /* ==========================================================================
-       FAQ Page
-       ========================================================================== */
-    
-      .faq .content-wrapper {
-        justify-content: space-between;
-      }
-    
-      .faq-content {
-        flex-basis: 45%;
-      }
-    
-      .faq h2 {
-        width: 100%;
-      }
-    }
-
-    @media only screen and (min-width: 1200px) {  
-        /*Desktop styles here */  
-
-            .content-wrapper {
-                 max-width: 960px;
-            }
-         
-             /* Hero */
-            .hero-area h1 {
-                width: 60%;
-            }
-         
-            /* Aside */
-            aside .content-wrapper {
-                justify-content: space-around;
-            }
-         
-            aside .content-wrapper .form-description,
-            aside .content-wrapper .form {
-                width:30%;
-            }
-         
-            /* Features */
-            .features h2 {
-                width: 90%;
-            }
-         
-            .features article {
-                flex-basis:33%; 
-            }
-         
-            /* Reviews */ 
-            .reviews article div {
-                width: 42%;
-            }
-         
-        /* ==========================================================================
-           About Page
-           ========================================================================== */
-            .mission h2,
-            .contact-section .content-wrapper h2 {
-                width: 95%;
-            }
-         
-        /* ==========================================================================
-           FAQ Page
-           ========================================================================== */
-            .faq h2 {
-                width: 100%;
-            }
-         
-        }
+  @media only screen and (min-width:768px) {
+    /*Tablet styles here*/
   
-  @media print,
-  (-webkit-min-device-pixel-ratio: 1.25),
-  (min-resolution: 1.25dppx),
-  (min-resolution: 120dpi) {
-    /* Style adjustments for high resolution devices */
+    /* General styles */
+    .content-wrapper {
+      max-width: 640px;
+      margin: 100px 0;
+    }
+        
+    h2 {
+      font-size: 2.25em;
+      line-height: 1.333;
+    }
+  
+    h3 {
+        font-size: 1.5em;
+        line-height: 1.25;
+    }
+  
+    /* Header */
+    header {
+      justify-content: space-around;
+      padding: 33px 0;
+    }
+  
+    header .content-wrapper {
+      width: 100%;
+      justify-content: space-between;
+    }
+  
+    header figure {
+      width: 30%;
+    }
+  
+    header nav {
+      width: 20%;
+    }
+  
+    header nav ul {
+      justify-content: space-between;
+    }
+  
+    .header-divider {
+      display: none;
+    }
+    /* Hero Area */
+  
+    .hero-area {
+      min-height: 600px;
+    }
+  
+    .hero-area h1 {
+      font-size: 3em;
+      line-height: 1;
+      margin: 0;
+  }
+  
+    /* Aside */
+    aside .content-wrapper {
+      margin: 50px 0;
+      display: flex;
+      justify-content: space-between;
+      flex-flow: row wrap;
+    }
+  
+    aside .content-wrapper .form-description,
+    aside .content-wrapper .form {
+      width: 40%;
+      margin: 0;
+    }
+  
+    /* Features */
+  
+    .features h2 {
+      margin-bottom: 20px;
+    }
+  
+    .features article {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-flow: column wrap;
+      flex-basis: 50%;
+    }
+    
+    .features .features-item-description {
+      width: 62%;
+    }
+  
+    /* Reviews */
+    .reviews article {
+      display: flex;
+      justify-content: space-between;
+    }
+  
+    .reviews h2 {
+      width: 85%;
+    }
+  
+    .reviews article figure,
+    .reviews article div {
+      width: 49%;
+    }
+  
+    .reviews h3 {
+      width: 75%;
+      margin: 0;
+    }
+    /* Footer */
+    footer .content-wrapper {
+      width: 65%;
+      margin: 100px 0;
+    }
+  
+    footer .footer-content {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-direction: row;
+    }
+  
+    footer .contact {
+      margin-bottom: 0;
+    }
+  
+    footer h4 {
+      font-size: 1.5em;
+      margin-bottom: 40px;
+    }
+  
+    footer p {
+        line-height: 1.285;
+    }
+  
+    footer .copyright {
+      width: 100%;
+    }
+  
+    /* ==========================================================================
+     About Page
+     ========================================================================== */
+  
+    .mission-content {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding-top: 20px;
+    }
+  
+    .mission-content p {
+      width: 45%;
+    }
+  
+    .contact-section .content-wrapper h2 {
+      width: 80%;
+    }
+  
+    .contact-content {
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
+    }
+  
+    .contact-content h4 {
+      font-size: 1.5em;
+    }
+  
+    /* ==========================================================================
+     FAQ Page
+     ========================================================================== */
+  
+    .faq .content-wrapper {
+      justify-content: space-between;
+    }
+  
+    .faq-content {
+      flex-basis: 45%;
+    }
+  
+    .faq h2 {
+      width: 100%;
+    }
+  
+    .faq h4,
+    .faq p {
+        font-size: .875em;
+        line-height: 1.125;
+    }
+  }
+  
+  @media only screen and (min-width:1200px) {
+    /*Desktop styles here*/
+  
+    header {
+      padding: 15px 0;
+    }
+  
+    .content-wrapper {
+      max-width: 960px;
+    }
+  
+    h2 {
+      font-size: 2.25em;
+    }
+  
+    h3,
+    h4 {
+        font-size: 1.875em;
+    }
+  
+    p {
+        font-size: 1.125em;
+        line-height: 1.333;
+    }
+    /* Hero */
+    .hero-area h1 {
+      font-size: 3.75em;
+      width: 80%;
+  }
+  
+    /* Aside */
+    aside .content-wrapper {
+      justify-content: space-around;
+    }
+  
+    aside .content-wrapper .form-description,
+    aside .content-wrapper .form {
+      width: 30%;
+    }
+  
+    .form-description p {
+      font-size: 1.125em;
+    }
+  
+    /* Features */
+  
+  
+    .features h2 {
+      width: 90%;
+    }
+  
+    .features article {
+      flex-basis: 33%;
+    }
+    
+    /* Reviews */
+    .reviews article div {
+      width: 42%;
+    }
+  
+    .reviews h2 {
+      padding-bottom: 50px;
+    }
+  
+    footer h4 {
+      font-size: 1.875em;
+    }
+  
+    /* ==========================================================================
+    About Page
+    ========================================================================== */
+  
+    .mission h2,
+    .contact-section .content-wrapper h2 {
+        width: 95%;
+        font-size: 3em;
+    }
+  
+    .contact-content h4 {
+      font-size: 1.875em;
+    }
+  
+    /* ==========================================================================
+    FAQ Page
+    ========================================================================== */
+    .faq h2 {
+      width: 100%;
+      font-size: 3em;
+    }
+      
+    .faq h4,
+    .faq p {
+        font-size: 1.125em;
+        line-height: 1;
+    }
   }
   
   /* ==========================================================================
