Adding your feature icons with font awesome

--- a/css/main.css
+++ b/css/main.css
@@ -332,6 +332,11 @@
     align-items: center;
     flex-flow: row wrap;
   }
+
+  .features i {
+    font-size: 3.75em;
+    margin-bottom: 40px;
+  }
   
   .features p {
     text-align: center;
