Social media icons styled

--- a/css/main.css
+++ b/css/main.css
@@ -113,6 +113,7 @@
   ul, 
   ol {
     list-style-type: none;
+    margin: 0;
   }
    
   a {
@@ -124,6 +125,7 @@
     font-family: 'Poppins', sans-serif;
     font-weight: 500;
     font-size: 1.875em;
+    margin: 0;
   }
    
   h3, 
@@ -240,11 +242,19 @@
   }
   
   footer .social-icons p {
+    background-color: #527158;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
   }
   
+  footer .social-icons p i {
+    font-size: 1.3125em;
+  }
+
   footer .copyright {
     margin: 20px 0;
   }
@@ -427,6 +437,10 @@
     line-height: 1;
   }
   
+  .faq-content {
+    margin-bottom: 50px;
+  }
+
   .faq-content {
     margin-bottom: 50px;
   }
@@ -613,6 +627,10 @@
       width: 62%;
     }
   
+    .features i {
+      margin-bottom: 30px;
+    }
+
     /* Reviews */
     .reviews article {
       display: flex;
@@ -658,6 +676,11 @@
         line-height: 1.285;
     }
   
+    footer .social-icons {
+      width: 12.5em;
+      justify-content: space-between;
+    }
+    
     footer .copyright {
       width: 100%;
     }
